package mobilefactory;

public interface ModelInformation {
    public enum SamsungModel{
        Note8, Note9, Note10;
    }

    public enum IOSModel{
        IPhone11, IPhone11Pro;
    }
}
