package mobilefactory.mobileComponent;

public class Antenna {
}
