package mobilefactory.mobileComponent;

public class Camera {
}
