package mobilefactory.outSourcing;

import mobilefactory.mobileComponent.OSSoftware;

public class KakaoSoftware extends OSSoftware {
    @Override
    public void run() {

    }
}
