package mobilefactory.outSourcing;

import mobilefactory.mobileComponent.OSSoftware;

public class MemoSoftware extends OSSoftware {
    @Override
    public void run() {

    }
}
