package mobilefactory.outSourcing;

import mobilefactory.mobileComponent.OSSoftware;

public class MessageSoftware extends OSSoftware {
    @Override
    public void run() {

    }
}
