package mobilefactory.outSourcing;

import mobilefactory.mobileComponent.OSSoftware;

public class PlayStore extends OSSoftware {
    @Override
    public void run() {

    }
}
