package mobilefactory.production.ios;

import mobilefactory.mobileComponent.Antenna;

public class IOSAntenna extends Antenna {
}
