package mobilefactory.production.ios;

import mobilefactory.mobileComponent.Battery;

public class IOSBattery extends Battery {
}
