package mobilefactory.production.samsung;

import mobilefactory.mobileComponent.Antenna;

public class SamsungAntenna extends Antenna {
}
