package mobilefactory.production.samsung;

import mobilefactory.mobileComponent.Camera;

public class SamsungCamera extends Camera {
}
